Add tests for installing google_auth_proxy from url
- Add install::remote_s3 test to fixtures in order to test installing
  google_auth_proxy binary from a url
- Patch google_auth_proxy::default to correctly handle the remote_file
  resource and fail properly with an invalid url

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -14,3 +14,13 @@ suites:
       - recipe[golang]
       - recipe[install::default]
     attributes:
+
+  - name: remote
+    run_list:
+      - recipe[golang]
+      - recipe[install::remote_s3]
+    attributes:
+      'google_auth_proxy':
+        # Override this via the environment or via .kitchen.local.yml
+        'source': <%= ENV['GOOGLE_AUTH_PROXY_BIN_URL'] %>
+        'checksum': <%= ENV['GOOGLE_AUTH_PROXY_CHECKSUM'] %>
